# otp-auth-flask

./: .gitignore  README.md  main.py  pyproject.toml
otpauth/: __init__.py  database.py  util.py
otpauth/templates/: base.jinja2  home.jinja2  login.jinja2  register.jinja2
