[tool.poetry]
name = "otp-auth-flask"
version = "0.1.0"
description = ""
authors = ["William B M Sampaio <56176702+WilliamSampaio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.1"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
